SFDCProject/src/objects/Custom_Lead__c.object
<CustomObject>
    <description>This object will capture leads that come in and may be erred out due to some issue.This will help us capture leads that would have been lost otherwise.
This object will have all the relevant fields currently existing on our Standard Lead Object.All fields will be text field with max length.</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Costco_Location__c</fullName>
        <label>Costco Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Costco_Member_ID__c</fullName>
        <label>Costco Member ID#</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Costco_Member_Type__c</fullName>
        <label>Costco Member Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>How_Do_You_Know_This_Person__c</fullName>
        <label>How Do You Know This Person</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Classification__c</fullName>
        <label>Lead Classification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Origin__c</fullName>
        <label>Lead Origin</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Electricity_Bill__c</fullName>
        <label>Monthly Electricity Bill</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referral_web_form__c</fullName>
        <label>Referral web form</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_by_Contact_Email__c</fullName>
        <label>Referred by Contact Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_by_Contact_First_Name__c</fullName>
        <label>Referred by Contact First Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_by_Contact_Last_Name__c</fullName>
        <label>Referred by Contact Last Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referred_by_Contact_Phone__c</fullName>
        <label>Referred by Contact Phone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Referrer_Already_A_Customer__c</fullName>
        <label>Referrer Already A Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Email__c</fullName>
        <label>Sales Rep Email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <type>TextArea</type>
    </fields>
    <label>Custom Lead</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom Lead Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>